# shallowpink-api

./: Dockerfile  README.md  docker-compose.yml  dockerfile  pyproject.toml  testy.py
.github/workflows/: ci.yml
app/: config.py  crud.py  db.py  main.py  models.py  schemas.py
app/routers/: v1.py
chessticulate_api/: __init__.py  __main__.py  app.py  config.py  crud.py  db.py  main.py  models.py  schemas.py  security.py  workers_service.py
chessticulate_api/routers/: __init__.py  game.py  invitation.py  move.py  user.py  v1.py
chessticulate_api/routers/v1/: __init__.py  main.py  schemas.py
scripts/: check_version.sh  get_version.sh
tests/: __init__.py  conftest.py  test_api.py  test_api_v1.py  test_crud.py  test_workers_service.py
tests/api_v1/: test_app.py
